Map a leading / in -c argument to %2f instead of dropping it silently.

PR:		bin/6558

Former-commit-id: 3d89b93e5a9fab678a1e08292c4692c3261912a6